--- a/themes/hugo-theme-ncurses/layouts/_default/baseof.html
+++ b/themes/hugo-theme-ncurses/layouts/_default/baseof.html
@@ -20,14 +20,14 @@
               <div class="border top right bottom vertical light"></div>
               <div class="border bottom left top vertical dark"></div>
               <div class="scrollable-sticky top">
-                <div class="scrollable-sticky-background"></div>
+                <div class="scrollable-sticky-background top"></div>
                 <div class="scrollable-sticky-border top">
                   <div class="border left top right horizontal dark"></div>
                   <div class="border top right horizontal corner light"></div>
                   <div class="border top right bottom vertical light"></div>
                   <div class="border bottom left top vertical dark"></div>
                 </div>
-                <span class="scroll-indicator up hidden" href=""></span>
+                <span class="scroll-indicator up hidden" href="">^^^</span>
               </div>
               <div class="scrollable-content-container">
                 <div class="scrollable-scroll-container">
@@ -35,14 +35,14 @@
                 </div>
               </div>
               <div class="scrollable-sticky bottom">
-                <div class="scrollable-sticky-background"></div>
+                <div class="scrollable-sticky-background bottom"></div>
                 <div class="scrollable-sticky-border bottom">
                   <div class="border top right bottom vertical light"></div>
                   <div class="border right bottom left horizontal light"></div>
                   <div class="border bottom left horizontal corner dark"></div>
                   <div class="border bottom left top vertical dark"></div>
                 </div>
-                <span class="scroll-indicator down hidden" href=""></span>
+                <span class="scroll-indicator down hidden" href="">vvv</span>
               </div>
             </div>
           </div>
