--- a/themes/hugo-theme-ncurses/layouts/_default/baseof.html
+++ b/themes/hugo-theme-ncurses/layouts/_default/baseof.html
@@ -19,7 +19,7 @@
             <div class="scrollable-border">
               <div class="border top right bottom vertical light"></div>
               <div class="border bottom left top vertical dark"></div>
-              <div class="scrollable-sticky top">
+              <div class="scrollable-sticky top ">
                 <div class="scrollable-sticky-background top"></div>
                 <div class="scrollable-sticky-border top">
                   <div class="border left top right horizontal dark"></div>
@@ -27,7 +27,7 @@
                   <div class="border top right bottom vertical light"></div>
                   <div class="border bottom left top vertical dark"></div>
                 </div>
-                <span class="scroll-indicator up hidden" href="">^^^</span>
+                <span class="scroll-indicator up" href="">^^^</span>
               </div>
               <div class="scrollable-content-container">
                 <div class="scrollable-scroll-container">
@@ -42,7 +42,8 @@
                   <div class="border bottom left horizontal corner dark"></div>
                   <div class="border bottom left top vertical dark"></div>
                 </div>
-                <span class="scroll-indicator down hidden" href="">vvv</span>
+                <span class="scroll-indicator down" href="">vvv</span>
+                <script type="application/javascript" src="js/scrolling.js"></script>
               </div>
             </div>
           </div>
